--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">MS</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="">MS</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -24,7 +28,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact" onclick="showContact()">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -35,7 +39,7 @@
     <div class="banner">
         <div class="card-group">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="images/img1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -43,7 +47,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="images/img4.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -51,7 +55,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+              <img src="images/img3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -65,26 +69,56 @@
 
     <!-- Age Input Field and Card -->
     <div class="container">
-        <form>
-            <div class="mb-3">
-                <label for="ageInput" class="form-label">Enter Your Age:</label>
-                <input type="number" class="form-control" id="ageInput" placeholder="Your Age">
-            </div>
-            <button type="button" class="btn btn-primary" onclick="checkAge()">Run</button>
-        </form>
-
-        <div id="ageCard" class="card" style="display: none;">
-            <div class="card-body">
-                <h5 class="card-title" id="ageCardTitle"></h5>
-                <p class="card-text" id="ageCardText"></p>
+        <div class="age-checker" id="web-age-section-id">
+            <label for="ageInput">Enter Your Age</label>
+            <input type="number" id="ageInput" min="0" required class="w-100 form-control" placeholder="Enter Your Age">
+            <button type="button" onclick="checkAge()" class="w-100 mt-3 p-2 bg-success text-white">CHECK AGE NOW</button>
+        </div>
+        <div class="child-section" id="childSection">
+            <h2 class="mt-5">You Are Child</h2>
+            <div class="card">
+                <img src="images/child.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">You Are Not Safe</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
             </div>
         </div>
-    </div>
-
+        <div class="adult-section" id="adultSection">
+            <h2 class="mt-5">You Are Adult</h2>
+            <div class="card">
+                <img src="images/adult1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">You Are Safe</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container mt-5">
+            <h2 class="contact">Contact Us</h2>
+            <form action="process_form.php" method="post">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" name="name" required>
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
 
     <div class="footer">
-        <p>&copy; <span id="currentYear"></span> © All rights reserved by MS</p>
+        <p> <span id="currentYear"></span> &copy; All rights reserved by MS</p>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
