--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
             <label for="ageInput">Enter Your Age</label>
             <input type="number" id="ageInput" min="0" required class="w-100 form-control" placeholder="Enter Your Age">
             <button type="button" onclick="checkAge()" class="w-100 mt-3 p-2 bg-success text-white">CHECK AGE NOW</button>
+            <p id="error-message" class="text-danger"></p>
         </div>
         <div class="child-section" id="childSection">
             <h2 class="mt-5">You Are Child</h2>
             <div class="card">
                 <img src="images/child.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">You Are Not Safe</h5>
+                    <h5 class="card-title1">You Are Not Safe</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
@@ -91,7 +92,7 @@
             <div class="card">
                 <img src="images/adult1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">You Are Safe</h5>
+                    <h5 class="card-title2">You Are Safe</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
