--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Age</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
@@ -39,13 +42,15 @@
 
     <!-- Banner -->
     <div class="banner">
+        <h1>Welcome to Our Page</h1>
+        <p>Explore and Enjoy</p>
         <div class="card-group">
             <div class="card">
               <img src="images/img1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Hiking</h5>
                 <p class="card-text">Immerse in nature's embrace, hiking unveils serenity through winding trails, breathtaking vistas, and a rhythmic communion with the great outdoors.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text"><small class="text-muted">Last updated 20 mins ago</small></p>
               </div>
             </div>
             <div class="card">
@@ -53,20 +58,19 @@
               <div class="card-body">
                 <h5 class="card-title">Hot air ballooning</h5>
                 <p class="card-text">TOffering stunning vistas of Goreme Valley and its limestone towers, a hot air balloon ride over Cappadocia is a treat for adventurers. It is also one of the best travel adventures in the world. Typically taking off at sunrise.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text"><small class="text-muted">Last updated 3 days ago</small></p>
               </div>
             </div>
             <div class="card">
               <img src="images/img3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Adventure</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 2 days ago</small></p>
+                <p class="card-text">Adventure beckons with uncharted paths, thrilling moments, and the promise of discovering the extraordinary in the midst of the unknown.</p>
+                <p class="card-text"><small class="text-muted">Last updated 2 months ago</small></p>
               </div>
             </div>
           </div>
-        <h1>Welcome to Our Page</h1>
-        <p>Explore and Enjoy</p>
+        
     </div>
 
     <!-- Age Input Field and Card -->
@@ -78,22 +82,22 @@
             <p id="error-message" class="text-danger"></p>
         </div>
         <div class="child-section" id="childSection">
-            <h2 class="mt-5">You Are Child</h2>
+            <h2 class="mt-5">You are a child</h2>
             <div class="card">
                 <img src="images/child.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title1">You Are Not Safe</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title1">You are a child</h5>
+                    <p class="card-text">I love playing with my toys and exploring the world around me. Ice cream is my favorite treat, especially the chocolate-flavored one!</p>
                 </div>
             </div>
         </div>
         <div class="adult-section" id="adultSection">
-            <h2 class="mt-5">You Are Adult</h2>
+            <h2 class="mt-5">You are an adult</h2>
             <div class="card">
                 <img src="images/adult1.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title2">You Are Safe</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h5 class="card-title2">You are an adult</h5>
+                    <p class="card-text">As an adult, I prioritize responsibilities, balancing work and personal life. I value meaningful connections, continuous learning, and contributing positively to the community.</p>
                 </div>
             </div>
         </div>
@@ -117,7 +121,7 @@
         </div>
 
     <div class="footer">
-        <p> <span id="currentYear"></span> &copy; All rights reserved by MS</p>
+        <p> <span id="currentYear"></span> &copy; All rights reserved by <a href="https://www.linkedin.com/in/md-sumon9897/" target="_blank">MS</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
