--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Age</a>
+                        <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#age-checker">Age</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact" onclick="showContact()">Contact</a>
