--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="age-checker" id="web-age-section-id">
             <label for="ageInput">Enter Your Age</label>
             <input type="number" id="ageInput" min="0" required class="w-100 form-control" placeholder="      Enter Your Age">
-            <button type="button" onclick="checkAge()" class="w-100 mt-3 p-2 bg-success text-white">CHECK AGE NOW</button>
+            <button type="button" onclick="checkAge()" class="w-100 mt-3 p-2 bg-success text-white">CHECK</button>
             <p id="error-message" class="text-danger"></p>
         </div>
         <div class="child-section" id="childSection">
