--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Age Input Field and Card -->
     <div class="container">
         <div class="age-checker" id="web-age-section-id">
-            <label for="ageInput">Enter Your Age</label>
+            <label for="ageInput">Your Age</label>
             <input type="number" id="ageInput" min="0" required class="w-100 form-control" placeholder="      Enter Your Age">
             <button type="button" onclick="checkAge()" class="w-100 mt-3 p-2 bg-success text-white">CHECK</button>
             <p id="error-message" class="text-danger"></p>
