--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
 
     <div class="footer">
-        <p> <span id="currentYear"></span> &copy; All rights reserved by <a href="https://www.linkedin.com/in/md-sumon9897/" target="_blank">MS</a></p>
+        <p> <span id="currentYear"></span> &copy; All rights reserved by <a href="https://www.linkedin.com/in/md-sumon9897/" target="_blank">Sumon</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
